public/css/style.css
/* ... */
.message-sender .media-body,
.message-receiver .media-body {
    padding: 30px;
    border: 1px solid #fafafa;
}
.message-sender .media-body {
    background: #fafafa
}

/*End Of Message Module*/
.ss-bborder > li > a {
    border-bottom:1px solid #dddddd;
}
/*Timetable*/
@media(min-width: 768px) {
	
	.ss-fix{
		position:relative;
	}
	
	.ss-fixes{
		position:fixed;
		width:45%;
	}
}

@media(min-width: 800px) {
	
	.ss-fix{
		position:relative;
	}
	
	.ss-fixes{
		position:fixed;
		width:46%;
	}
}

@media(min-width: 992px) {
	
	.ss-fix{
		position:relative;
	}
	
	.ss-fixes{
		position:fixed;
		width:50%;
	}
	
}

@media(min-width: 1024px) {
	.ss-fix{
		position:relative;
	}
	
	.ss-fixes{
		position:fixed;
		width:50%;
	}
	
}

@media(min-width: 1100px) {
	.ss-fix{
		position:relative;
	}
	
	.ss-fixes{
		position:fixed;
		width:52%;
	}
	
}


@media(min-width: 1200px) {
    .academia_visiblelist_fix.affix {
        width: 60%
    }
	
	.ss-fix{
		position:relative;
	}
	
	.ss-fixes{
		position:fixed;
		width:54%;
	}
	
}
@media(min-width: 1600px) {
	
	.ss-fix{
		position:relative;
	}
	
	.ss-fixes{
		position:fixed;
		width:57.3%;
	}
	
    .academia_visiblelist_fix.affix {
        width: 70.1%
    }
}

.vertical-scroll {
    max-height: 500px;
    overflow: auto;
}

#window_auto_height.vertical-scroll {
    overflow: auto;
    max-height: none;
}

.vertical-scroll table.table,
.vertical-scroll table.table td,
.vertical-scroll table.table th {
    border: 1px solid #f5f5f5;
}
.vertical-scroll table.table tr:hover .btn {
    background: #97d881;
}

.btn.btn-zindextop {
    position: relative;
    z-index: 9;
}

/*Prabhakar*/

#calendar {
    width: 100%;
    
}
#calendar a {
    color: #8e352e;
    text-decoration: none;
}
#calendar ul {
    list-style: none;
    padding: 0;
    margin: 0;
    width: 100%;
}
#calendar li {
    display: block;
    float: left;
    width: 100%;
    padding: 5px;
    box-sizing: border-box;
    border: 1px solid #ccc;
    margin-right: -1px;
    margin-bottom: -1px;
}
#calendar ul.weekdays {
    height: 40px;
    background: #353f4d;
}
#calendar ul.weekdays li {
    text-align: center;
    text-transform: uppercase;
    line-height: 20px;
    border: none !important;
    padding: 10px 6px;
    color: #fff;
    font-size: 13px;
}
#calendar .days li {
    height: 180px;
    background: #f2f1f9;
    position: relative;
    min-width: 70px;
}
#calendar .days li > div {
    min-width: 110px
}
#calendar .days li:hover {
    background: #d3d3d3;
}
#calendar .date {
    text-align: center;
    margin-bottom: 5px;
    padding: 4px;
    background: #333;
    color: #fff;
    width: 20px;
    border-radius: 50%;
    float: right;
}
#calendar .event {
    clear: both;
    display: block;
    font-size: 13px;
    border-radius: 4px;
    padding: 5px;
    margin-top: 40px;
    margin-bottom: 5px;
    line-height: 14px;
    background: #e4f2f2;
    border: 1px solid #b5dbdc;
    color: #009aaf;
    text-decoration: none;
}
#calendar .event-desc {
    color: #666;
    margin: 3px 0 7px 0;
    text-decoration: none;
}
#calendar .other-month {
    background: #f5f5f5;
    color: #666;
}

/* calender-staff*/

.calender-staff {
    text-align: center;
    padding: 10px;
    border-radius: 5px;
    height: 100%;
    overflow: hidden;
    position: relative;
    border: 2px dashed #e6e6e6;
    background: #ffffff;
}
.calender-staff .close-this {
    position: absolute;
    right: 5px;
    top: 5px;
    cursor: pointer;
}
.calender-staff .user {
    width: 45px;
    height: 45px;
    border-radius: 50%;
    overflow: hidden;
    display: block;
    margin: auto;
    margin-top: 10px;
}
.calender-staff .user img {
    width: 100%;
    height: 100%
}
.calender-staff h4 {
    font-size: 14px;
    color: #656f7d;
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
}
.calender-staff p {
    font-size: 12px;
    margin: 0;
}
.calender-staff .actions {
    position: absolute;
    bottom: 0;
    right: 5px
}
.calender-staff .actions span {
    display: inline-block;
    margin: 0 4px;
    font-size: 16px;
    color: #b1afaf;

}
.slot-booking-information th {
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    color: #4f5c61;
}
.slot-booking-information span {
    display: inline-block;
    width: 16px;
    height: 16px;
    background: #cecece;
    border-radius: 10%;
    border: 3px solid rgba(0, 0, 0, .01);
}
.slot-booking-information span.slot-book {
    background: #209ddc;
}
table.slot-booking-information>tbody>tr>td {
    border: 1px solid #ffffff;
}
table.slot-booking-information>tbody>tr>td.slot-book {
    background: #209ddc;
}
table.slot-booking-information>tbody>tr>td.slot-booked {
    background: #7f858e;
}
.table-responsive.horizontal-scroll {
    overflow: auto;
}
.table.slot-booking-information>tbody>tr>td,
.table.slot-booking-information>tbody>tr>th,
.table.slot-booking-information>tfoot>tr>td,
.table.slot-booking-information>tfoot>tr>th,
.table.slot-booking-information>thead>tr>td,
.table.slot-booking-information>thead>tr>th {
    padding: 8px 10px;
}
.time-table.table>tbody>tr>td {
    padding: 8px 5px;
}
.time-table.table>tbody>tr>td:first-child {
    padding: 0;
    vertical-align: middle;
    text-transform: uppercase;
    width: 45px;
    text-align: center;
    background: #fbfbfb;
    border-right: 1px solid #ccc;
    font-weight: 700;
}
.time-table.table>thead:first-child>tr:first-child>th {
    padding: 0;
    width: 0;
    text-align: left;
    border-right: 1px solid #ccc;
    font-weight: 700;
    text-align: center;
    padding: 6px 0;
    background: #f1f1f1;
}
p.empty-block {
    margin-top: 62px;
}
p.break-block {
    position: absolute;
    width: 100%;
    top: 50%;
    text-align: center;
    margin-top: -10px;
    left: 0;
}
.state-icon {
    left: -5px;
}
.list-group-item-primary {
    color: rgb(255, 255, 255);
    background-color: rgb(66, 139, 202);
}
/* ... */

